Update the code to the latest version of pip-services toolkit